# cwkeyer

./: .gitignore  CMakeLists.txt  CwKeyer.desktop  CwKeyer.qmlproject  CwKeyer.qmlproject.qtds  CwKeyer.qrc  CwKeyer.rc  CwKeyerApp.desktop  README.md  README_LINUX.md  compile_linux.sh  compile_windows.bat  qds.cmake  qtquickcontrols2.conf
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
App/configuration/: CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationValue.cpp  ConfigurationValue.h
App/core/: CMakeLists.txt  Sound.h
App/cwdecoder/: CMakeLists.txt  CwDecoder.cpp  CwDecoder.h  MorseTable.h
App/gui/: CMakeLists.txt  GuiConnector.cpp  GuiConnector.h
App/keyboard/: CMakeLists.txt  Keyboard.cpp  Keyboard.h  KeyboardListener.cpp  KeyboardListener.h  KeyboardListener_linux.cpp  KeyboardListener_win.cpp  Keyboard_linux.cpp  Keyboard_win.cpp
App/keyer/: CMakeLists.txt  Keyer.cpp  Keyer.h
App/serial/: CMakeLists.txt  N1MMProxy.cpp  N1MMProxy.h  N1MMProxy_linux.cpp  N1MMProxy_win.cpp  SerialComm.cpp  SerialComm.h  SerialComm_linux.cpp  SerialComm_win.cpp  SerialPorts.cpp  SerialPorts.h  SerialPorts_linux.cpp  SerialPorts_win.cpp
App/sound/: CMakeLists.txt  CwGenerator.cpp  CwGenerator.h  Sound.cpp  Sound.h
App/usb/: CMakeLists.txt  Device.cpp  Device.h  DeviceInterface.cpp  DeviceInterface.h  HidDevice.cpp  HidDevice.h  UsbDevice.cpp  UsbDevice.h  VendorProduct.cpp  VendorProduct.h
App/usb/libusb/: CMakeLists.txt
App/utils/: CMakeLists.txt  IDitDah.h  IKeyerCW.h  Logger.h  Utils.cpp  Utils.h
CwKeyer/: CMakeLists.txt  Constants.qml  qmldir
CwKeyer/designer/: plugin.metainfo
CwKeyerContent/: App.qml  CMakeLists.txt  Main.ui.qml
